--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "overmoon",
   "license": "ISC",
   "dependencies": {
+    "@alpha-manager/core": "^1.0.6",
+    "@alpha-manager/fb": "^1.0.6",
     "fb": "^2.0.0",
     "moniker": "^0.1.2"
   },
